--- a/styles/main.css
+++ b/styles/main.css
@@ -133,7 +133,7 @@ body {
     height: 100%;
 }
 .cards__item-info {    
-    padding: 2.28vw 16.5vw 1.88vw 5.23vw;
+    padding: 2.28vw 16.5vw 2vw 5.23vw;
 }
 .cards__item-name {
     font-size: 1.3vw;
@@ -154,7 +154,7 @@ body {
     font-weight: 400;
     letter-spacing: -0.21vw;
     line-height: 1.2;
-    margin: 1.23vw 0 0vw 0vw;
+    margin: 1.23vw 0 0;
 }
 .cards__item-description {
     font-size: 1.3vw;
@@ -163,6 +163,7 @@ body {
     line-height: 1.4;
     margin: 1vw 0 0;
     padding-right: 6.2vw;
+    /*padding-bottom: 6.2vw;*/
 }
 
 /*-------------BUTTON BUY-------------------*/
@@ -238,6 +239,52 @@ body {
     .cards__item {
         width: 100%;
     }
+    .cards__item-info {
+        padding: 3.48vw 26.5vw 5vw 3.48vw;
+    }
+    .cards__item-name {
+        font-size: 3vw;
+        padding: 0.3vw 2vw;
+        border-radius: 1vw;
+    }
+    .cards__item-header {
+        font-size: 7vw;
+        margin-bottom: 2.23vw;
+    }
+    .cards__item-description {
+        font-size: 3.5vw;
+    }
+    .cards__item-btn {
+        position: absolute;
+        top: 3.28vw;
+        right: 9vw;
+        height: 8vw;
+        width: 18vw;
+    }
+    .btn span {
+        font-size: 3vw;
+    }
+    .cards__item-btn::after {
+        width: 5.67vw;
+        height: 5.67vw;
+        top: 1.35vw;
+        right: -2.73vw;
+    }
+    .btn.buy span::before {
+        width: 2.56vw;
+        left: -3.1vw;
+        top: 0.3vw;
+    }
+    .cards__item-amount {
+        width: 17vw;
+        height: 4.5vw;
+        bottom: 2.8vw;
+        right: 5.2vw;
+        font-weight: 700;
+        font-size: 3vw;
+        padding-top: 0.5vw;
+    }
+
     .cards__item:first-child {
         min-height: 39.3vw;
     }
@@ -245,11 +292,12 @@ body {
         padding-top: 4.48vw;
     }
     .cards__item:first-child .cards__item-header {
-        font-size: 4.1vw;
+        font-size: 9vw;
         letter-spacing: -0.23vw;
         padding-right: 8.6vw;
-        height: 10.8vw;
+        height: 22.8vw;
     }
+
     .cards__item:first-child .cards__item-btn {
         top: 4.48vw;
     }
