--- a/styles/main.css
+++ b/styles/main.css
@@ -3,8 +3,11 @@
 * {
     box-sizing: border-box;
 }
+html {
+    font-size: 0.8vw;
+}
 body {
-    font-size: 10px;
+    font-size: 1rem;
 }
 
 .text_upper {
@@ -24,9 +27,9 @@ body {
 }
 .btn span {
     font-family: "Open Sans", sans-serif;
-    font-size: 1.1rem;
+    font-size: 1.76rem;
     color: #ffffff;
-    margin-left: 1.5rem;
+    margin-left: 2.48rem.;
     position:relative;
     z-index: 300;
 }
@@ -66,7 +69,7 @@ body {
     padding: 0;
     color: #aab1b5;
     font-family: "Open Sans", sans-serif;
-    font-size: 0.9rem;
+    font-size: 1.44rem;
     text-decoration: none;
     border-bottom: solid 4px rgba(252, 214, 51, 0);
 }
@@ -135,30 +138,30 @@ body {
     padding: 2.28vw 16.5vw 1.88vw 5.23vw;
 }
 .cards__item-name {
-    font-size: 1rem;
+    font-size: 1.6rem;
     font-weight: 700;
     line-height: 1.7;
-    letter-spacing: -0.02rem;
-    word-spacing: 0.7rem;
+    letter-spacing: -0.03rem;
+    word-spacing: 1.12rem;
     text-align: center;
-    padding: 0.1rem  0.8rem;
-    border-radius: 0.4rem;
+    padding: 0.1rem  1.28rem;
+    border-radius: 0.64rem;
     display: inline-flex;
 }
 .cards__item-name .lett_spase0 {
     letter-spacing: 0;
 }
 .cards__item-header {
-    font-size: 2.5rem;
+    font-size: 4rem;
     font-weight: 400;
-    letter-spacing: -0.18rem;
+    letter-spacing: -0.3rem;
     line-height: 1.2;
     margin: 1.23vw 0 0vw 0vw;
 }
 .cards__item-description {
-    font-size: 1.2rem;
+    font-size: 1.92rem;
     font-weight: 300;
-    letter-spacing: -0.15rem;
+    letter-spacing: -0.24rem;
     line-height: 1.25;
     margin: 0.9vw 0 0;
     padding-right: 6.2vw;;
@@ -173,10 +176,10 @@ body {
     
 }
 .cards__item:nth-child(-n+2) .cards__item-header {
-    font-size: 3.3rem;
-    letter-spacing: -0.23rem;
+    font-size: 5.28rem;
+    letter-spacing: -0.4rem;
     padding-right: 126px;
-    height: 8.5rem;
+    height: 13.6rem;
 }
 .cards__item:nth-child(-n+2) .cards__item-btn {
     top: 4.48vw;
@@ -191,36 +194,36 @@ body {
     position: absolute;
     top: 2.28vw;
     right: 6.88vw;
-    height: 3rem;
-    width: 7.3rem;
+    height: 4.8rem;
+    width: 11.68rem;
 }
 
 .cards__item-btn::after {
-    width: 2.128rem;
-    height: 2.128rem;
+    width: 3.4rem;
+    height: 3.4rem;
     background: linear-gradient(135deg, #3bb1e0, #3a85bd);
     border-radius: 4px;
     display: block;
     content: " ";
     position: absolute;
     transform: rotate(45deg);
-    top: 0.45rem;
-    right: -1rem;
+    top: 0.72rem;
+    right: -1.6rem;
     z-index: 200;
 }
 .btn.buy span::before {
     display: inline-block;
     content: url(../images/shopping-cart.svg);
-    width: 1.56rem;
+    width: 2.5rem;
     position: absolute;
-    left: -1.8rem;
+    left: -2.88rem;
     top: 0;
     z-index: 300;
 }
 
 .cards__item-amount {
-    width: 6.6rem;
-    height: 2rem;
+    width: 10.56rem;
+    height: 3.2rem;
     background: #f5c600;
     text-align: center;
     border-radius: 6px;
@@ -228,13 +231,16 @@ body {
     bottom: 1.8vw;
     right: 5.2vw;
     font-weight: 700;
-    font-size: 1.6rem;
-    letter-spacing: 0.08rem;
+    font-size: 2.56rem;
+    letter-spacing: 0.2rem;
     color: #545628;
 }
 
 
 @media only screen and (max-width: 680px) {
+    html {
+        font-size: 1.6vw;
+    }
     .cards__item {
         width: 100%;
     }
@@ -248,16 +254,42 @@ body {
         
     }
     .cards__item:first-child .cards__item-header {
-        font-size: 3.3rem;
-        letter-spacing: -0.23rem;
+        font-size: 5.28rem;
+        letter-spacing: -0.4rem;
         padding-right: 126px;
-        height: 8.5rem;
+        height: 13.6rem;
     }
     .cards__item:first-child .cards__item-btn {
         top: 4.4vw;
     }
 }
 
+@media only screen and (min-width: 1281px) {
+    html {
+        font-size: 0.6vw;
+    }
+    .cards__item {
+        width: 33.33333%;
+    }
+    .cards__item:nth-child(-n+3) {
+        min-height: 39.3vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-info {
+        padding-top: 4.48vw;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-content {
+        
+    }
+    .cards__item:nth-child(-n+3) .cards__item-header {
+        font-size: 5.28rem;
+        letter-spacing: -0.4rem;
+        padding-right: 126px;
+        height: 13.6rem;
+    }
+    .cards__item:nth-child(-n+3) .cards__item-btn {
+        top: 4.4vw;
+    }
+}
 
 
 
